--- a/Pr4/src/excepciones/.gitignore
+++ b/Pr4/src/excepciones/.gitignore
@@ -1,3 +1,4 @@
 /ArgsDistintosFuncionesException.class
 /CruceNuloException.class
 /ArgumentosInvalidosAlgoritmo.class
+/SimboloFuncionInvalido.class
